# ind-eng-210

./: .gitignore  README.md  lecture1.py  lecture2.py  main.py  pkgx.yaml  pyproject.toml  worksheet3.py
homework/: homework1.py  homework2.py  homework3.py  homework4.py
lectures/: lecture1.py  lecture4.py  lecture6.ipynb
midterm/: main.py
midterm_project/: main.py  pyproject.toml  utils.py
modules/: mymodule.py
worksheets/: worksheet2.py  worksheet3.py  worksheet4.py  worksheet5.py  worksheet6.py
