[project]
name = "ind-eng-210"
version = "0.1.0"
description = "Intro to Python Class"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "dash>=3.2.0",
    "ipykernel~=6.30",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "statsmodels>=0.14.5",
]
